fix overlapping tables #9858

--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -107,6 +107,7 @@ table p:last-of-type {
 }
 
 td {
+    word-break: break-word;
 
     code {
         word-break: normal;
